src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>合同机%2F样机安装</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>升迁疑难</fullName>
        </values>
        <values>
            <fullName>回访</fullName>
        </values>
        <values>
            <fullName>已关闭</fullName>
        </values>
        <values>
            <fullName>服务中</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>服务流程</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>升迁疑难</fullName>
        </values>
        <values>
            <fullName>回访</fullName>
        </values>
        <values>
            <fullName>已关闭</fullName>
        </values>
        <values>
            <fullName>服务中</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>等待备件</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>验收时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptancePerson__c</fullName>
        <label>验收人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcceptanceResults__c</fullName>
        <label>验收结果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>已验收</fullName>
                </value>
                <value>
                    <fullName>未验收</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcceptanceTelephone__c</fullName>
        <label>验收人</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>客户</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignTechnologist__c</fullName>
        <label>指派技术专家</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>陈宝林</fullName>
                </value>
                <value>
                    <fullName>邱海英</fullName>
                </value>
                <value>
                    <fullName>袁昕</fullName>
                </value>
                <value>
                    <fullName>晏乐仑</fullName>
                </value>
                <value>
                    <fullName>王迪</fullName>
                </value>
                <value>
                    <fullName>李孝华</fullName>
                </value>
                <value>
                    <fullName>翟德强</fullName>
                </value>
                <value>
                    <fullName>李俊</fullName>
                </value>
                <value>
                    <fullName>赵庆丰</fullName>
                </value>
                <value>
                    <fullName>赵鑫</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BJSF__c</fullName>
        <label>原因(BJSF)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>医生所提问题的回答</description>
        <label>不满意</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHUCIdate__c</fullName>
        <label>初次安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargeSituation__c</fullName>
        <label>收费情况</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>保内免费</fullName>
                </value>
                <value>
                    <fullName>保外免费</fullName>
                </value>
                <value>
                    <fullName>保外收费</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chinese__c</fullName>
        <defaultValue>false</defaultValue>
        <label>中文</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompleteTime__c</fullName>
        <label>完成时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>升级完成日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contacts11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>个案 (联系人)</relationshipLabel>
        <relationshipName>Contacts11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>个案</relationshipLabel>
        <relationshipName>Contacts221</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorrespondingPeriod__c</fullName>
        <label>相应周期(天)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CuatomerFeedback__c</fullName>
        <label>客户意见</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerSatisfactionEvaluation__c</fullName>
        <label>客户满意度评价</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>非常满意</fullName>
                </value>
                <value>
                    <fullName>满意</fullName>
                </value>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>不满意</fullName>
                </value>
                <value>
                    <fullName>投诉</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dean__c</fullName>
        <label>院长</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>发货及发货详情</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetectedContent__c</fullName>
        <label>已检测内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeviceCompositionDescription__c</fullName>
        <label>设备清单</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeviceReturnAddress__c</fullName>
        <label>设备返回地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceTime__c</fullName>
        <label>设备安装完成时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeviseSerialNumber__c</fullName>
        <formula>Equipment__r.Name</formula>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctoropinion__c</fullName>
        <label>使用医生的意见</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>结束时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EngineerFeedback__c</fullName>
        <label>总部工程师反馈</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <defaultValue>false</defaultValue>
        <label>英文</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EquipmentDivision__c</fullName>
        <label>设备科</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentModel__c</fullName>
        <formula>Equipment__r.ProductS__r.Model__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>Equipment__r.ProductS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentOperationStatus__c</fullName>
        <label>设备运转状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>设备运转正常，配件齐全</fullName>
                </value>
                <value>
                    <fullName>设备运转正常，配件缺失，需要补全配件</fullName>
                </value>
                <value>
                    <fullName>设备运转不正常，需要解决问题</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>服务请求（常规）</relationshipLabel>
        <relationshipName>Equipment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evacuation__c</fullName>
        <label>撤机性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>样机撤机</fullName>
                </value>
                <value>
                    <fullName>维修撤机</fullName>
                </value>
                <value>
                    <fullName>合同撤机</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exterior__c</fullName>
        <label>外观是否完好</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Types__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FWTD__c</fullName>
        <label>原因(FWTD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Faccessories__c</fullName>
        <label>配件是否齐全</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Types__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FailureDate__c</fullName>
        <label>故障出现日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaultPhenomenon__c</fullName>
        <label>当前故障现象</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieldSpecification__c</fullName>
        <label>现场规范</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalSolution2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终解决人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FinalSolution1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalSolution__c</fullName>
        <label>最终解决方案</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FindingsAndConclusions__c</fullName>
        <label>发现和结论</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HMY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>医生所提问题的回答</description>
        <label>很满意</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HospitalAddress__c</fullName>
        <label>医院地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importphone__c</fullName>
        <label>导入联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <formula>Equipment__r.installationdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallationNature__c</fullName>
        <label>安装性质</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBZW1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的组成部分</description>
        <label>基本掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBZW2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的正常开机及关机顺序</description>
        <label>基本掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBZW3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的临床知识介绍</description>
        <label>基本掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JJXL__c</fullName>
        <label>原因(JJXL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JNMY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>基本满意</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jbjxlh1__c</fullName>
        <label>旧备件序列号1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jbjxlh2__c</fullName>
        <label>旧备件序列号2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jbjxlh3__c</fullName>
        <label>旧备件序列号3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySuggestions__c</fullName>
        <label>遗留问题及建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MYD__c</fullName>
        <label>原因(MYD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaintenanceAmount__c</fullName>
        <label>收费金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaintenanceResults__c</fullName>
        <label>维修结果</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerGuidance__c</fullName>
        <label>经理指导意见</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MissingDescription__c</fullName>
        <label>配件缺失说明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MockupResources__c</fullName>
        <label>样机资源</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的组成介绍</description>
        <label>否</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NO2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的正常开机及关机顺序</description>
        <label>否</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NO3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的临床知识介绍</description>
        <label>否</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoAcceptanceReason__c</fullName>
        <label>未验收原因</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcceptanceResults__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安装环境不符合</fullName>
                </value>
                <value>
                    <fullName>配件不齐全</fullName>
                </value>
                <value>
                    <fullName>医院特殊原因</fullName>
                </value>
                <value>
                    <fullName>设备故障</fullName>
                </value>
                <value>
                    <fullName>其它</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfficePhone1__c</fullName>
        <label>办公电话(科室主任)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <label>办公电话(医生用）</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrderTime__c</fullName>
        <label>接单时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PartsName1__c</fullName>
        <formula>PartsNumber1__r.ChineseDescription__c</formula>
        <label>备件名称1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName2__c</fullName>
        <formula>PartsNumber2__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName3__c</fullName>
        <formula>PartsNumber3__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsNumber1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号1</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>个案</relationshipLabel>
        <relationshipName>IBjy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsNumber2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号2</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>个案 (备件编号2)</relationshipLabel>
        <relationshipName>IBk8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsNumber3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号3</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>个案 (备件编号3)</relationshipLabel>
        <relationshipName>IBkI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <formula>Account.postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>邮政编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProblemDescription__c</fullName>
        <label>故障问题描述</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessResult__c</fullName>
        <label>处理结果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>已解决</fullName>
                </value>
                <value>
                    <fullName>未解决</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessingCycle__c</fullName>
        <label>处理周期(天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingStage__c</fullName>
        <label>处理阶段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrototypeApplication__c</fullName>
        <label>样机申请单</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrototypeInstallation__c</fullName>
        <label>样机安装</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrototypeModel__c</fullName>
        <label>样机型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrototypingSerialNumber__c</fullName>
        <label>样机序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QqTime__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>请求时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotationFees__c</fullName>
        <label>报价收费</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonComplaint__c</fullName>
        <label>投诉原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegionalManager__c</fullName>
        <label>大区经理评定</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>当未验收原因是医院特殊原因，需要填写此备注</inlineHelpText>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequestName__c</fullName>
        <formula>RecordType.Name&amp;&quot;-&quot;&amp;EquipmentModel__c
&amp;&quot;-&quot;&amp;DeviseSerialNumber__c&amp;&quot;-&quot;&amp;Account.Name</formula>
        <label>请求名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTime__c</fullName>
        <label>到达时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ResponsibleDepartment1__c</fullName>
        <label>负责部门(撤机)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>培训与支持中心</fullName>
                </value>
                <value>
                    <fullName>北京技术服务中心</fullName>
                </value>
                <value>
                    <fullName>上海技术服务中心</fullName>
                </value>
                <value>
                    <fullName>广州技术服务中心</fullName>
                </value>
                <value>
                    <fullName>西安技术服务中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术服务中心</fullName>
                </value>
                <value>
                    <fullName>济南技术服务中心</fullName>
                </value>
                <value>
                    <fullName>沈阳技术服务中心</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleDepartment__c</fullName>
        <formula>engineer__r.LfourDepartment__c</formula>
        <label>负责部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnTime__c</fullName>
        <label>回访时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnVisitRecord__c</fullName>
        <label>回访记录</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFPXK__c</fullName>
        <defaultValue>&quot;否&quot;</defaultValue>
        <label>是否培训</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                    <default>true</default>
                    <label>否</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>满意度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>非常满意</fullName>
                </value>
                <value>
                    <fullName>满意</fullName>
                </value>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>不满意</fullName>
                </value>
                <value>
                    <fullName>投诉</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendTime__c</fullName>
        <label>派单时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>配件清单及序列号</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ServiceAttitude__c</fullName>
        <label>服务态度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceRequestType__c</fullName>
        <label>服务请求类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>售前培训</fullName>
                </value>
                <value>
                    <fullName>售后培训</fullName>
                </value>
                <value>
                    <fullName>手术跟机</fullName>
                </value>
                <value>
                    <fullName>合同机安装</fullName>
                </value>
                <value>
                    <fullName>样机安装</fullName>
                </value>
                <value>
                    <fullName>移机安装</fullName>
                </value>
                <value>
                    <fullName>样机撤机</fullName>
                </value>
                <value>
                    <fullName>维修撤机</fullName>
                </value>
                <value>
                    <fullName>合同机撤机</fullName>
                </value>
                <value>
                    <fullName>维修维护</fullName>
                </value>
                <value>
                    <fullName>技术服务</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignerPhone__c</fullName>
        <label>联系人电话</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolveEfficiency__c</fullName>
        <label>解决效率</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechnicalEvaluation__c</fullName>
        <label>技术部评定</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalManagerAssessment__c</fullName>
        <label>技术经理评定</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TreatmentMethod__c</fullName>
        <label>处理方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Types__c</fullName>
        <label>技术服务类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>手术跟机</fullName>
                </value>
                <value>
                    <fullName>产品培训</fullName>
                </value>
                <value>
                    <fullName>设备移机</fullName>
                </value>
                <value>
                    <fullName>设备撤机</fullName>
                </value>
                <value>
                    <fullName>售前支持</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseDepartment__c</fullName>
        <label>使用科室</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseDoctorQdvice__c</fullName>
        <label>使用医生意见(科室主任)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerySatisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非常满意</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitRecord__c</fullName>
        <label>回访记录</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WQZW1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的组成部分</description>
        <label>完全掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WQZW2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的正常开机及关机顺序</description>
        <label>完全掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WQZW3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的临床知识介绍</description>
        <label>完全掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WZW1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的组成部分</description>
        <label>未掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WZW2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的正常开机及关机顺序</description>
        <label>未掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WZW3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的临床知识介绍</description>
        <label>未掌握</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarrantyExpirationDate__c</fullName>
        <formula>Equipment__r.warrantyEnd__c</formula>
        <label>保修终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whether__c</fullName>
        <label>配件是否有故障</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkContent__c</fullName>
        <label>工作内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkDate__c</fullName>
        <label>请求时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XCGF__c</fullName>
        <label>原因(XCGF)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>XYSD__c</fullName>
        <label>原因（XYSD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Xbjxlh1__c</fullName>
        <label>新备件序列号1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xbjxlh2__c</fullName>
        <label>新备件序列号2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xbjxlh3__c</fullName>
        <label>新备件序列号3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YES1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的组成介绍</description>
        <label>是</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>